20080819 version: agar-core-ada 0.1
20080820 code: added thin function layer to events, datasource, error, config
               to use ada string/integer/boolean types.
20080821 version: agar-core-ada 0.11
20080821 code: removed init_video from agar.core (to be placed in agar.gui)
20080821 code: more ada-typed functions.
20080821 code: init_core -> init
20080821 code: added slist generic for use in gui bindings.
20080822 code: removed internal functions from agar.core.object.
20080824 code: added agar.core.dso and agar.core.limits.
20080824 code: updated class_t.
20080824 version: agar-core-ada 0.12
20080824 code: updated object/class API.
20080827 code: flags default to 0.
20080827 code: format string audit. protect agar.core.error.
20080827 code: agar.core.object format string.
20080827 code: removed useless format string functions from agar.core.event
               in preparation for array variants.
20080828 code: update to event API.
20080828 code: added prop API as subpackage of agar.core.object.
20080905 code: use subpackages for C functions instead of prefixes.
20080905 code: added agar.core.file.
20080905 version: agar-core-ada-0.13
20080906 code: register a callback with the agar C library to raise exceptions
               instead of fatal errors.
20080906 code: add ada exception test.
20080907 code: added agar.core.object.delete.
20080910 code: fix bug in progname setting (a pointer is stored to the string
               inside the C library, so string cannot be stack allocated).
20080910 code: fixed null check (not portable, due to import pragma).
20080917 code: added basic types more friendly to bindings.
20080927 code: namespace types, datasource types and API update.