@@ -76,12 +76,12 @@ else
     fi
   fi
 
-  if [ -z ${SYSDEP_CC} ]
+  if [ -z "${SYSDEP_CC}" ]
   then
     ${SYSDEP_ERROR} "C compiler is not defined"
     exit 112
   fi
-  if [ -z ${SYSDEP_LD} ]
+  if [ -z "${SYSDEP_LD}" ]
   then
     ${SYSDEP_ERROR} "linker is not defined"
     exit 112
@@ -93,6 +93,75 @@ else
   if [ $? -eq 1 ]; then SYSDEP_LDFLAGS=`${SYSDEP_LINE} 1 < ${conf}`; fi
   export SYSDEP_CFLAGS
   export SYSDEP_LDFLAGS
+
+  #
+  # optional Ada components
+  #
+
+  conf=`${SYSDEP_FILE} show "conf-adacomp"`
+  if [ $? -eq 1 ]
+  then
+    SYSDEP_ADA_COMP=`${SYSDEP_LINE} 1 < ${conf}`
+    if [ $? -ne 0 ]
+    then
+      ${SYSDEP_ERROR} "could not read conf-adacomp"
+      exit 112;
+    fi
+  fi
+
+  conf=`${SYSDEP_FILE} show "conf-adabind"`
+  if [ $? -eq 1 ]
+  then
+    SYSDEP_ADA_BIND=`${SYSDEP_LINE} 1 < ${conf}`
+    if [ $? -ne 0 ]
+    then
+      ${SYSDEP_ERROR} "could not read conf-adabind"
+      exit 112;
+    fi
+  fi
+
+  conf=`${SYSDEP_FILE} show "conf-adalink"`
+  if [ $? -eq 1 ]
+  then
+    SYSDEP_ADA_LINK=`${SYSDEP_LINE} 1 < ${conf}`
+    if [ $? -ne 0 ]
+    then
+      ${SYSDEP_ERROR} "could not read conf-adalink"
+      exit 112;
+    fi
+  fi
+
+  #
+  # If Ada compiler was defined, check for presence of binder and linker.
+  #
+
+  if [ ! -z "${SYSDEP_ADA_COMP}" ]
+  then
+    if [ -z "${SYSDEP_ADA_BIND}" ]
+    then
+      ${SYSDEP_ERROR} "Ada binder is not defined"
+      exit 112
+    fi
+    if [ -z "${SYSDEP_ADA_LINK}" ]
+    then
+      ${SYSDEP_ERROR} "Ada linker is not defined"
+      exit 112
+    fi
+  fi
+
+  export SYSDEP_ADA_COMP
+  export SYSDEP_ADA_BIND
+  export SYSDEP_ADA_LINK
+
+  conf=`${SYSDEP_FILE} show "conf-adacflags"`
+  if [ $? -eq 1 ]; then SYSDEP_ADA_CFLAGS=`${SYSDEP_LINE} 1 < ${conf}`; fi
+  conf=`${SYSDEP_FILE} show "conf-adabflags"`
+  if [ $? -eq 1 ]; then SYSDEP_ADA_BFLAGS=`${SYSDEP_LINE} 1 < ${conf}`; fi
+  conf=`${SYSDEP_FILE} show "conf-adaldflags"`
+  if [ $? -eq 1 ]; then SYSDEP_ADA_LDFLAGS=`${SYSDEP_LINE} 1 < ${conf}`; fi
+  export SYSDEP_ADA_CFLAGS
+  export SYSDEP_ADA_BFLAGS
+  export SYSDEP_ADA_LDFLAGS
 fi
 
 #
@@ -128,6 +197,55 @@ then
   exit 112
 fi
 export SYSDEP_LD
+
+#
+# Check Ada compiler/binder/linker is usable, if defined.
+#
+
+if [ ! -z "${SYSDEP_ADA_COMP}" ]
+then
+  ada_comp_usable=0
+  for dir in `echo $PATH | sed -e 's/:/ /g'`
+  do
+    if [ -x "${dir}/${SYSDEP_ADA_COMP}" ]
+    then
+      ada_comp_usable=1
+    fi
+  done
+  if [ ${ada_comp_usable} -eq 0 ]
+  then
+    ${SYSDEP_ERROR} "could not locate usable Ada compiler"
+    exit 112
+  fi
+
+  ada_bind_usable=0
+  for dir in `echo $PATH | sed -e 's/:/ /g'`
+  do
+    if [ -x "${dir}/${SYSDEP_ADA_BIND}" ]
+    then
+      ada_bind_usable=1
+    fi
+  done
+  if [ ${ada_bind_usable} -eq 0 ]
+  then
+    ${SYSDEP_ERROR} "could not locate usable Ada binder"
+    exit 112
+  fi
+
+  ada_link_usable=0
+  for dir in `echo $PATH | sed -e 's/:/ /g'`
+  do
+    if [ -x "${dir}/${SYSDEP_ADA_LINK}" ]
+    then
+      ada_link_usable=1
+    fi
+  done
+  if [ ${ada_link_usable} -eq 0 ]
+  then
+    ${SYSDEP_ERROR} "could not locate usable Ada linker"
+    exit 112
+  fi
+fi
 
 #
 # Read configuration files, compiling support programs if necessary.
@@ -226,6 +344,36 @@ then
   # find CPU cache line size
   SYSDEP_CPU_CACHE_LINE_SIZE="`${SYSDEP_DIR_RELATIVE}/sd-cpuclinesz ${SYSDEP_OS}`"
   export SYSDEP_CPU_CACHE_LINE_SIZE
+
+  #----------------------------------------------------------------------
+  # optional Ada components
+
+  SYSDEP_ADA_TYPE="UNKNOWN"
+  SYSDEP_ADA_VERSION="0.0.0"
+
+  if [ "${SYSDEP_ADA_COMP}" ]
+  then
+    if [ ! -f "${SYSDEP_DIR_RELATIVE}/sd-adaversion.out" ]
+    then
+      SYSDEP_ADA_VERSION_TMP="`${SYSDEP_DIR_RELATIVE}/sd-adaversion \
+        "${SYSDEP_ADA_COMP}"    \
+        "${SYSDEP_ADA_CFLAGS}"  \
+        "${SYSDEP_ADA_BIND}"    \
+        "${SYSDEP_ADA_BFLAGS}"  \
+        "${SYSDEP_ADA_LINK}"    \
+        "${SYSDEP_ADA_LDFLAGS}"`"
+      SYSDEP_ADA_TYPE=`echo "${SYSDEP_ADA_VERSION_TMP}" | awk '{print $1}'`
+      SYSDEP_ADA_VERSION=`echo "${SYSDEP_ADA_VERSION_TMP}" | awk '{print $2}'`
+      echo "${SYSDEP_ADA_VERSION_TMP}" > "${SYSDEP_DIR_RELATIVE}/sd-adaversion.out"
+    else
+      SYSDEP_ADA_TYPE=`cat "${SYSDEP_DIR_RELATIVE}/sd-adaversion.out" | awk '{print $1}'`
+      SYSDEP_ADA_VERSION=`cat "${SYSDEP_DIR_RELATIVE}/sd-adaversion.out" | awk '{print $2}'`
+    fi
+  fi
+
+  export SYSDEP_ADA_TYPE
+  export SYSDEP_ADA_VERSION
+
 else
   # find system type
   SYSDEP_OS="SYSDEP_OS_`${SYSDEP_FILE} get "conf-x-systype" "UNKNOWN"`"
@@ -282,6 +430,18 @@ else
   # find CPU cache line size
   SYSDEP_CPU_CACHE_LINE_SIZE=`${SYSDEP_FILE} get "conf-x-cpucline" "0"`
   export SYSDEP_CPU_CACHE_LINE_SIZE
+
+  #
+  # optional Ada components
+  #
+
+  # find compiler type
+  SYSDEP_ADA_TYPE="SYSDEP_ADA_TYPE_`${SYSDEP_FILE} get "conf-x-adatype" "UNKNOWN"`"
+  export SYSDEP_ADA_TYPE
+  
+  # find compiler version
+  SYSDEP_ADA_VERSION=`${SYSDEP_FILE} get "conf-x-adaver" "0.0.0"`
+  export SYSDEP_ADA_VERSION
 fi
 
 # override path prefix
